--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-{ 
+{
   "name": "dimensions-grid-network",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "engines": {
     "node": ">=20"
@@ -11,8 +11,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^15.0.0",
+    "next": "15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.0.0"
   }
 }
